<?xml version="1.0"?>
<package format="2">
  <name>object_tracking_yolo</name>
  <version>0.0.1</version>
  <description>The object_tracking_yolo package</description>

  <maintainer email="kmjung@robotis.com">kayman</maintainer>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">kayman</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>darknet_ros_msgs</depend>
</package>
